# Emberhacks2025

./: .gitignore  README.md  app.py  llm_to_server_glue.py  main.py  pyproject.toml  requirements.txt  server_to_latex_glue.py  setup.py  temp.py
WebSideFront/: index.html  styles.css
auth/: keys.env  main.py  models.py
certainpy/: __init__.py  app.py  llm_to_server_glue.py  main.py  requirements.txt  server_to_latex_glue.py
certainpy/latex_extension/: __init__.py  data.py
certainpy/llm_interface/: json_parsing_rules.txt  request_manager.py
certainpy/static/: script.js
certainpy/tui/: repl.py
latex_extension/: data.py
llm_interface/: json_parsing_rules.txt  request_manager.py
resources/: db_init_requests.sql  db_init_users.sql
static/: script.js  script_signup.js  scriptlogin.js  styles.css
templates/: accesdenined.html  index.html  login.html  sighnin.html  signin.html
tui/: repl.py
